syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.listener.eth";
option java_outer_classname = "EthListenerProto";

package blockchain;

// The common service definition.
service Listener {
    // Add task
    rpc AddTask (AddTaskRequest) returns (AddTaskResponse) {
    }
    // Remove task
    rpc RemoveTask (RemoveTaskRequest) returns (Empty) {
    }
}

// The request message containing task
message AddTaskRequest {
    ListenObject listenTo = 1;
    string callbackType = 2;
    string callbackUrl = 3;
    string taskType = 4;
}

message AddTaskResponse {
    string taskId = 1;
}

message RemoveTaskRequest {
    string taskId = 1;
}

// ListenObject defines what will service listen to
message ListenObject {
    // type can be one of the follow values: TxId or Address
    string type = 1;
    string value = 2;
}

message Empty {
}